# whisper-trans

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  app.py  requirements.txt  setup.cfg  subtitles.py  transcribe.py
src/whispaau/: archive.py  cli_utils.py  logging.py  utils.py  writers.py
tests/: test_cli_arguments.py  test_cli_utils.py  test_logging.py
whispaau/: writers.py
