[metadata]
name = AAU Whisper Transcription
description = Customised cli for AI transcription
version = 1.1
url = https://github.com/aau-claaudia/whisper-trans/
auther = Pelle Rosenbeck Gøeg and OpenAI
license_files = LICENSE

[options]
install_requires=lxml
py_modules=['whispaau']
package_dir =
   = src
